Changelog for collective.emaillogin
===================================


1.2 (unreleased)
----------------

- Patch the login method from
  Products.PlonePAS.plugins.cookie_handler.ExtendedCookieAuthHelper.
  This is the code from Plone 3.3.6; it is included because Plon 3.1.7
  does the wrong thing for us here.
  [maurits]


1.1 (2011-12-13)
----------------

- Patch CMFPlone.MembershipTool.testCurrentPassword to authenticate
  with the login name.  The code in Plone 3.3.5 itself already works
  (and is simply copied here), but Plone 3.1.7 has an error that is
  triggered for us as the user id is not always the same as the login
  name.
  [maurits]


1.0 (2011-11-23)
----------------

- In the mailPassword method explicitly disallow looking for a member
  with the given forgotten user id when this is an e-mail address.  We
  only search for users with that e-mail address as login name.  This
  only has an effect when you have changed your e-mail address to
  something really different (instead of just a change in the case).
  Without this change, you could reset your password with your old
  address, but could not login with that address.
  [maurits]

- Refactored authenticateCredentials.  This avoids getting a message
  stating you are logged in when in fact you are not logged in.
  [maurits]

- Added upgrade step to migrate all existing users to have a lowercase
  login name (when their e-mail address is used as login name).
  [maurits]

- Patch PloneTool.setMemberProperties to always set the e-mail address
  to lower case and to update the login name when the e-mail address
  changes.
  [maurits]

- In validate_personalize.vpy turn the e-mail address to lowercase.
  [maurits]

- Patch Products.PlonePAS.tools.membership.MembershipTool.addMember to
  always add the member as lowercase, also when not called from
  registered.cpy
  [maurits]

- In join_form_validate.vpy turn the e-mail address to lowercase.
  [maurits]
